--- a/src/styles/FloorGrid.css
+++ b/src/styles/FloorGrid.css
@@ -1,3 +1,8 @@
+.Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -5,6 +10,32 @@
   align-items: flex-start;
   align-content: flex-start;
   outline: 3px solid black;
-  margin: 50px;
   width: 700px;
+  margin-bottom: 20px;
+  background-color: white;
+}
+.buttons {
+  display: flex;
+  width: 700px;
+  margin: auto;
+  justify-content: space-evenly;
+}
+button {
+  margin-inline: auto;
+  font: 1.5rem "Fira Sans", sans-serif;
+}
+.buildContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-inline: auto;
+  margin-top: 10px;
+}
+.Height {
+  transform: rotate(270deg);
+  font-weight: bold;
+}
+.Width {
+  font-weight: bold;
 }
