--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,9 +1,12 @@
 .Navbar {
   display: flex;
+  width: 100%;
   flex-direction: column;
   gap: 20px;
   outline: 2px solid black;
   height: 100px;
+  background-color: white;
+  margin-bottom: 50px;
 }
 .Logo {
   display: flex;
@@ -15,4 +18,10 @@
   display: flex;
   justify-content: space-around;
   font: 1.5rem "Fira Sans", sans-serif;
+}
+.MenuItem {
+  font-size: 20px;
+  text-decoration: none;
+  border: none;
+  background-color: white;
 }
