--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,7 @@
 .aboutTextContainer {
-  position: absolute;
-  left: 10vw;
+  display: flex;
+  margin-inline: auto;
+  justify-content: center;
   width: 50vw;
   height: 300px;
   background-color: white;
