added boundaries, deployed, removed contact page

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 50px;
-  outline: 2px solid black;
+  border: 2px solid black;
   row-gap: 5px;
   padding: 5px;
   background-color: white;
