--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   max-width: 500px;
   z-index: -1;
+  outline: 2px solid black;
 }
 .slideshowSlider {
   white-space: nowrap;
