--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,10 @@
 .Navbar {
   position: sticky;
-  top: 20px;
+  top: 0px;
   width: 100%;
   flex-direction: column;
   gap: 20px;
-  outline: 2px solid black;
+  border: 2px solid black;
   height: 100px;
   background-color: white;
   margin-bottom: 50px;
