--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,7 +3,8 @@
   margin-inline: auto;
   justify-content: center;
   width: 50vw;
-  height: 300px;
+  height: 40vh;
   background-color: white;
   outline: 2px solid black;
+  padding: 1rem;
 }
