--- a/src/styles/Build.css
+++ b/src/styles/Build.css
@@ -2,20 +2,24 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
+  row-gap: 1rem;
   align-items: center;
   text-align: center;
 }
 .submitButton {
-  display: inline-block;
-  height: 30px;
-  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  width: 10rem;
   cursor: pointer;
-  margin: 15px 7px 0px;
+  margin: 1rem;
   background-color: white;
-  font-size: 15px;
   color: black;
   outline: 2px solid black;
   text-decoration: none;
   top: auto;
+}
+input {
+  outline: 1px solid black;
 }
