--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,16 +1,21 @@
 .FooterContainer {
   display: flex;
+  width: 100vw;
+  margin-top: 2rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
   border: 2px solid black;
-  row-gap: 5px;
-  padding: 5px;
+  row-gap: 0.5rem;
+  padding: 0.5rem;
   background-color: white;
 }
 .icons {
   display: flex;
   justify-content: space-between;
-  gap: 5px;
+  gap: 0.5rem;
+}
+.icons a {
+  all: unset;
+  cursor: pointer;
 }
